<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.magnetcollection1.ChicagoLandMagnets">

    <ImageView
        android:id="@+id/imgAdler"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:contentDescription="@string/adler"
        app:srcCompat="@drawable/adler"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imgSixFlags"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/sixFlags"
        app:srcCompat="@drawable/sixflags"
        tools:layout_editor_absoluteY="175dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <ImageView
        android:id="@+id/imgWrigley"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:contentDescription="@string/wrigley"
        app:srcCompat="@drawable/wrigley"
        tools:layout_editor_absoluteY="175dp"
        app:layout_constraintLeft_toRightOf="@+id/imgSixFlags"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />

    <ImageView
        android:id="@+id/imgFieldMuseum"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:contentDescription="@string/field"
        app:srcCompat="@drawable/field"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgWrigley"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent" />
</android.support.constraint.ConstraintLayout>
