<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.janetaa.magnetcollection1.MisouriMagnets">

    <ImageView
        android:id="@+id/imgBranson"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:contentDescription="@string/branson"
        app:srcCompat="@drawable/branson"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="8dp" />

    <ImageView
        android:id="@+id/imgStLouis"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:contentDescription="@string/saintLouis"
        app:srcCompat="@drawable/saintlouis"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgBranson" />

    <ImageView
        android:id="@+id/imgSilverDollar"
        android:layout_width="300dp"
        android:layout_height="160dp"
        android:contentDescription="@string/silverDollar"
        app:srcCompat="@drawable/silverdollar"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imgStLouis"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp" />
</android.support.constraint.ConstraintLayout>
